--- a/index.kalender.html
+++ b/index.kalender.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2Do App</title>
     <link rel="stylesheet" href="Assets/CSS/main.css">
+    <link rel="manifest" href="manifest.json">
     <script src="Assets/JS/main.js" defer></script>
 </head>
 <body>
